--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -30,8 +30,14 @@ jobs:
           npm ci
           npm run build:ci
 
-      - name: Archive artifacts
+      - name: Archive production artifacts
         uses: actions/upload-artifact@v1
         with:
           name: dist
           path: dist
+
+      - name: Archive code coverage result
+        uses: actions/upload-artifact@v1
+        with:
+          name: code-coverage-report
+          path: coverage
