--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "start": "ng serve",
     "build": "ng build",
     "build:prod": "ng build --prod",
-    "test": "ng test",
+    "test": "ng test --watch=false --codeCoverage=true --browsers=ChromeHeadlessCustom",
+    "test:watch": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "build:ci": "npm run clean && npm run build:prod"
+    "build:ci": "npm run clean && npm run test && npm run build:prod"
   },
   "private": true,
   "dependencies": {
@@ -36,9 +37,9 @@
     "@angular/cli": "~9.1.0",
     "@angular/compiler-cli": "~9.1.0",
     "@angular/language-service": "~9.1.0",
-    "@types/node": "^13.9.5",
     "@types/jasmine": "~3.5.10",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^13.9.5",
     "codelyzer": "^5.2.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.1",
@@ -48,6 +49,7 @@
     "karma-jasmine": "~3.1.1",
     "karma-jasmine-html-reporter": "^1.5.3",
     "protractor": "~5.4.3",
+    "puppeteer": "^2.1.1",
     "ts-node": "~8.8.1",
     "tslint": "~6.1.0",
     "typescript": "~3.8.3"
