--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -21,6 +21,11 @@ jobs:
         with:
           node-version: ${{ matrix.node }}
 
+      - name: Init Git on runner
+        run: |
+          git config user.email "${{ secrets.GIT_USER_MAIL }}"
+          git config user.name "github-actions"
+
       - name: npm install
         run: npm ci
 
